Update plublish process to publish to sonatype
Description
===========

Bintray and with it JCenter will be shutdown the comming weeks.
To be able to host this library in a commenly available repository
we need to switch the publish logic to publish to sonatype and with
it the central repository. This needs some adjustments in both
gradle file and jenkins pipeline.

I took the liberty to upgrade the project to use the latest version
of gradle `6.8.2` as this has some features regarding pgp signing which
gradle 5 does not have. I want to sign the artifacts with a gpg subkey
to not roll out the master key on the ci system with a ascii in memory
format which is not supported with gradle 5.

The jenkins steps also need to fetch new credentials.

Changes
=======

* ![UPDATE] `build.gradle` to publish to OSSRH instead of bintray
* ![UPDATE] gradle wrapper to version `6.8.2`
* ![UDDATE] `Jenkinsfile` to pass new credentials and publish snapshot versions

--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,12 @@ plugins {
     id 'java-library'
     id 'groovy'
     id 'maven-publish'
-    id 'com.jfrog.bintray' version '1.8.4'
-    id 'nebula.release' version '15.3.1'
+    id 'signing'
+    id 'nebula.release' version '15.2.0'
     id 'jacoco'
     id 'com.github.kt3k.coveralls' version '2.8.2'
+    id 'io.codearte.nexus-staging' version '0.22.0'
+    id "de.marcphilipp.nexus-publish" version "0.4.0"
 }
 
 group "com.wooga.xcodebuild"
@@ -36,26 +38,32 @@ if (cliTasks.contains("rc")) {
 
 dependencies {
     implementation 'org.codehaus.groovy:groovy-all:2.4.15'
-    implementation 'org.apache.commons:commons-io:+'
+    implementation 'org.apache.commons:commons-io:[1.3.2,2)'
     testImplementation 'org.spockframework:spock-core:1.2-groovy-2.4'
-    testImplementation 'com.github.stefanbirkner:system-rules:1.18.0'
-    testImplementation 'net.bytebuddy:byte-buddy:1.10.19'
+    testImplementation 'com.github.stefanbirkner:system-rules:[1.18,2)'
+    testImplementation 'net.bytebuddy:byte-buddy:[1.10.19,2)'
 }
 
 repositories {
     mavenCentral()
-    jcenter()
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+task sourcesJar(type: Jar) {
+    archiveClassifier.set('sources')
     from sourceSets.main.allSource
 }
 
 javadoc.failOnError = false
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
+task javadocJar(type: Jar) {
+    archiveClassifier.set('javadoc')
+    from javadoc
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
+    }
 }
 
 artifacts {
@@ -63,78 +71,72 @@ artifacts {
     archives javadocJar
 }
 
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintray.user') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintray.key') : System.getenv('BINTRAY_API_KEY')
-    publish = true
-    publications = ['Bintray']
-    pkg {
-        repo = 'maven'
-        name = project.name
-        userOrg = 'wooga'
-        licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/wooga/xcpretty.groovy.git'
-        githubRepo = 'https://github.com/wooga/xcpretty.groovy'
-        labels = ['xcode', 'xcodebuild', 'logs', 'formatter']
-        version {
-            name = project.version.toString()
-            vcsTag = project.version.toString()
-            released = new Date()
-        }
-    }
-}
-
-def pomConfig = {
-    licenses {
-        license {
-            name "The Apache Software License, Version 2.0"
-            url "http://www.apache.org/licenses/LICENSE-2.0.txt"
-            distribution "repo"
-        }
-    }
-    developers {
-        developer {
-            id "manfred.endres"
-            name "Manfred Endres"
-            email "manfred.endres@wooga.net"
-        }
-    }
-
-    scm {
-        url "https://github.com/wooga/xcpretty.groovy"
-    }
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled = true
-        html.enabled = true
-    }
-}
-
 publishing {
     publications {
-        Bintray(MavenPublication) {
-            from components.java
+        main(MavenPublication) {
+            artifactId = project.name
+            from(components["java"])
             artifact sourcesJar {
                 classifier "sources"
             }
             artifact javadocJar {
                 classifier "javadoc"
             }
+            pom {
+                name = 'xcpretty'
+                description = 'A fast and flexible formatter for xcodebuild.'
+                url = 'https://github.com/wooga/xcpretty.groovy'
 
-            groupId project.group
-            artifactId project.name
-            version project.version.toString()
-            pom.withXml {
-                def root = asNode()
-                root.appendNode('description', 'A fast and flexible formatter for xcodebuild.')
-                root.appendNode('name', 'xcpretty')
-                root.appendNode('url', 'https://github.com/wooga/xcpretty.groovy')
-                root.children().last() + pomConfig
+                artifactId = project.name
+                inceptionYear = "2019"
+
+                scm {
+                    connection = 'scm:git:https://github.com/wooga/xcpretty.groovy.git'
+                    developerConnection = 'scm:git:https://github.com/wooga/xcpretty.groovy.git'
+                    url = 'https://github.com/wooga/xcpretty.groovy.git'
+                }
+
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id = 'manfred.endres'
+                        name = 'Manfred Endres'
+                        email = 'manfred.endres@wooga.net'
+                    }
+                }
             }
         }
     }
 }
 
-[finalSetup, candidateSetup, snapshotSetup].each { it.dependsOn(build)}
+nexusPublishing {
+    repositories {
+        sonatype()
+    }
+}
+
+nexusStaging {
+    username = project.hasProperty('ossrhUsername') ? project.property('ossrhUsername') : System.getenv('OSSRH_USERNAME')
+    password = project.hasProperty('ossrhPassword') ? project.property('ossrhPassword') : System.getenv('OSSRH_PASSWORD')
+    packageGroup = "com.wooga"
+}
+
+signing {
+    def signingKeyId = project.hasProperty("signingKeyId") ? project.property('signingKeyId') : System.getenv('OSSRH_SIGNING_KEY_ID')
+    def signingKey = project.hasProperty("signingKey") ? project.property('signingKey') : System.getenv('OSSRH_SIGNING_KEY')
+    def signingPassword = project.hasProperty('signingPassphrase') ? project.property('signingPassphrase') : System.getenv("OSSRH_SIGNING_PASSPHRASE")
+    useInMemoryPgpKeys(signingKeyId.toString(), signingKey.toString(), signingPassword.toString())
+    sign publishing.publications.main
+}
+
+postRelease.dependsOn(tasks.publish)
+tasks."final".dependsOn(tasks.closeAndReleaseRepository)
+tasks."candidate".dependsOn(tasks.closeAndReleaseRepository)
+tasks.closeAndReleaseRepository.mustRunAfter(tasks.postRelease)
+tasks.publish.mustRunAfter(tasks.release)
