update to groovy 3/ build to gradle 7

--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,12 @@ plugins {
     id 'groovy'
     id 'maven-publish'
     id 'signing'
-    id 'nebula.release' version '15.3.1'
+    id 'nebula.release' version '17.2.2'
     id 'jacoco'
-    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
-    id 'net.wooga.snyk' version '0.12.0'
-    id "net.wooga.snyk-wdk-java" version "0.6.0"
-    id "net.wooga.cve-dependency-resolution" version "0.3.0"
+    id "io.github.gradle-nexus.publish-plugin" version "1.3.0"
+    id 'net.wooga.snyk' version '0.13.0'
+    id "net.wooga.snyk-wdk-java" version "0.7.0"
+    id "net.wooga.cve-dependency-resolution" version "0.5.0"
 }
 
 group "com.wooga.xcodebuild"
@@ -38,11 +38,16 @@ if (cliTasks.contains("rc")) {
 }
 
 dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:2.5.16'
+    implementation 'org.codehaus.groovy:groovy-all:3.0.17'
     implementation 'commons-io:commons-io:[2.7,3)'
-    testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
+    testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
+    testImplementation 'org.spockframework:spock-junit4:2.3-groovy-3.0'
     testImplementation 'com.github.stefanbirkner:system-rules:[1.18,2)'
     testImplementation 'net.bytebuddy:byte-buddy:[1.10.19,2)'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 repositories {
